C2 server with Reverse shell auto_add_device

--- a/mobserver/templates/send_commands.html
+++ b/mobserver/templates/send_commands.html
@@ -70,7 +70,7 @@ $(document).ready(function() {
           {% csrf_token %}
           <div class="input-group mb-3">
             {{ form.command }}
-            <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Send</button>
+            <button class="btn btn-outline-secondary" type="submit" id="send_command">Send</button>
           </div>
         </form>
       </div>
