--- a/mobserver/templates/add_device.html
+++ b/mobserver/templates/add_device.html
@@ -8,10 +8,9 @@
   <form class="row g-3 align-items-center" method="POST" action="{% url 'add_device' %}">
     <div class="col">
       <div class="input-group mb-3">
-          {% csrf_token %}
           {{ form.name }}
         <input class="form-control" type="hidden" name="ip_address" value="{{ user_ip }}">
-        <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+        <button class="btn btn-outline-secondary" type="submit" id="add_btn">Button</button>
       </div>
     </div>
   </form>
