Update reverse shell and C2 server templates.

--- a/mobserver/templates/add_device.html
+++ b/mobserver/templates/add_device.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <div style="padding:3rem;">
+  <div class="p-5">
     <h1>Add a New Device</h1>
   </div>
   
