--- a/mobserver/templates/base.html
+++ b/mobserver/templates/base.html
@@ -10,7 +10,7 @@
   <body>
     <nav class="navbar navbar-dark bg-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Mob C2</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Mob CC</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
