--- a/mobserver/templates/command_list.html
+++ b/mobserver/templates/command_list.html
@@ -8,13 +8,24 @@
   <div class="row">
     <div class="col text-start">
       {% if commands %}
-        <ul>
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col">Device Name</th>
+              <th scope="col">Command</th>
+              <th scope="col">Response</th>
+            </tr>
+          </thead>
+          <tbody>
           {% for command in commands %}
-            <li>
-              <strong>{{ command.device }}: {{ command.command }}: {{ command.response }}</strong>
-            </li>
+            <tr>
+              <td scope="row">{{ command.device }}</td>
+              <td scope="row">{{ command.command }}</td>
+              <td scope="row">{{ command.response }}</td>
+            </tr>
           {% endfor %}
-        </ul>
+          </tbody>
+        </table>
       {% else %}
         <p>No commands have been sent yet.</p>
       {% endif %}
